--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h1 class="banner-title">Brand New Group<br>
                     of Architects
                 </h1>
-                <p class="banner-discription">
+                <p class="text-light-gray">
                     There are many variations of passages of Lorem Ipsum available, but the
                     majority have suffered alteration in some form, by injected humour, or randomised words which don't
                     look even.
@@ -49,7 +49,7 @@
             <div class="teams-content">
                 <h3 class="teams-title"><span class="Quick-list">Quick list</span> <span class="of-Our">of Our</span>
                     <span class="Features">Features</span></h3>
-                <p class="teams-discription">
+                <p class="text-light-gray">
                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                     alteration in some form, by injected humour, or randomised words which don't look even
                 </p>
