--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             </div>
             <div class="teams-content">
                 <h3 class="teams-title"><span class="Quick-list">Quick list</span> <span class="of-Our">of Our</span>
-                    <span class="Features">Features</span></h3>
+                    <span class="Features">Features</span>
+                </h3>
                 <p class="text-light-gray">
                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                     alteration in some form, by injected humour, or randomised words which don't look even
@@ -63,7 +64,7 @@
         <!-- facts section -->
         <section class="facts-container">
             <h3 class="section-title">Some Facts</h3>
-            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
             <div class="facts-card-container">
                 <div class="card">
                     <img src="./images/icons/ribon.png" alt="">
@@ -85,6 +86,18 @@
                     <h2 class="card-stats"> 22578 </h2>
                     <p class="card-title">Email Send</p>
                 </div>
+            </div>
+        </section>
+        <!-- Sponsors section -->
+        <section class="Sponsors-container">
+            <h3 class="section-title">Our Sponsors</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+            <div class="sponsors-img-container">
+                <img src="./images/sponsors/spotify.png" alt="">
+                <img src="./images/sponsors/amazon.png" alt="">
+                <img src="./images/sponsors/google.png" alt="">
+                <img src="./images/sponsors/telerama.png" alt="">
+                <img src="./images/sponsors/figma.png" alt="">
             </div>
         </section>
     </main>
