--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@
         </section>
     </main>
     <!-- main end -->
+    <!-- footer start -->
     <footer>
-
+        <p>All rights reserved copyright @ 2023. startup landing page design</p>
     </footer>
 </body>
 
